--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "react-hook-form": "^7.60.0",
         "react-icons": "^5.5.0",
         "react-phone-input-2": "^2.15.1",
+        "react-phone-number-input": "^3.4.14",
         "react-rating": "^2.0.5",
         "sonner": "^2.0.6",
         "tailwind-merge": "^3.0.1",
@@ -70,6 +71,7 @@
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.7.2",
+        "vaul": "^1.1.2",
         "vite": "6.3.4",
         "zustand": "^5.0.7"
     },
